--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -228,7 +228,6 @@
   "Enabled": "Activé",
   "Domain name": "Nom de domaine",
   "Default  language": "Langue par défaut",
-  "Unlogged description": "Description en mode déconnecté",
   "Logo": "Logo",
   "CSS": "CSS",
   "CSS color theme": "Thème de couleurs CSS",
@@ -960,6 +959,9 @@
   "mailing_internalization.front_office_tab": "Autres pages",
   "mailing_internalization.go_to_edit_template": "Editer le modèle de mails",
   "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
+  "tenant_edit.link_to_cmspages": "Editer les pages",
+  "tenant_edit.home_page": "Page d'accueil",
+  "tenant_edit.view_home_page": "Voir la page d'accueil",
   "Translation mode enabled": "Mode traduction activé",
   "Search translation": "Rechercher une traduction",
   "SEO": "SEO",
