--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -986,5 +986,7 @@
   "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
   "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée.",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
-  "incorrect password": "Mots de passe incorrect"
+  "incorrect password": "Mots de passe incorrect",
+  "Standard mode": "Mode standard",
+  "Expert mode": "Mode expert"
 }
