--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -360,6 +360,7 @@
     "deletion successful": "deletion successful",
     "No API": "No API",
     "View this Api": "View this Api",
+    "Delete this Api": "Delete this API",
     "New api": "New api",
     "Informations": "Informations",
     "Otoroshi": {
