--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -381,7 +381,7 @@
   "Versions and tags": "Versions et tags",
   "Visibility and subscription": "Visibilité et souscription",
   "Authorizations": "Autorisations",
-  "api.already.exists": "Une api avec le nom \"%s\" existe déjà",
+  "api.already.exists": "Une api avec ce nom existe déjà",
   "Add header": "Titre",
   "Add bold text": "Gras",
   "Add italic text": "Italique",
@@ -978,6 +978,8 @@
   "constraints.matches.email": "Votre courriel doit être une addresse électronique valide",
   "constraint.matches.password": "Votre mots de passe doit avoir 8 lettres min. et contenir au moins une lettre capitale, un nombre et un caractère spéciale (#$^+=!*()@%&).",
   "constraint.oneof.confirm.password": "La confirmation du mots de passe doit être identique au mots de passe",
+  "constraints.reserved.char.version": "Certains caractères sont reservé pour la version (%s)",
+  "SEO":"SEO",
   "Robot.txt.label": "Contenu  du Robot.txt",
   "Robot.txt.content": "Le contenu du fichier Robot.txt file servi par Daikoku",
   "Mode": "Mode",
