display home cms page on /

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -273,7 +273,7 @@
     "Audit trail (Kafka)": "Audit trail (Kafka)",
     "Alerting": "Alerting",
     "Bucket": "Bucket",
-    "tenant_edit.cms_pages": "Personalized home pages",
+    "tenant_edit.cms_pages": "Personalized home page",
     "tenant_edit.link_to_cmspages": "Edit the pages",
     "tenant_edit.home_page": "Home page",
     "tenant_edit.view_home_page": "View home page",
