--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -276,7 +276,7 @@
   "Audit trail (Kafka)": "Piste d'audit (Kafka)",
   "Alerting": "Alerting",
   "Bucket": "Bucket",
-  "tenant_edit.cms_pages": "Pages d'accueil personnalisés",
+  "tenant_edit.cms_pages": "Page d'accueil personnalisée",
   "Session max. age": "Age max. de session",
   "Second": {
     "s": "Seconde",
