--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -998,7 +998,7 @@
     "cms.create.path_placeholder": "The path where the page will be displayed",
     "cms.create.path_slash_constraints": "the path must start with a slash",
     "cms.create.path_paths_constraints": "this path is already taken",
-    "cms.create.body_placeholder": "Content of the page",
+    "cms.create.body_placeholder": "Published content",
     "cms.create.body_help": "The content of the page. It must be of the same type than the content-type",
     "cms.create.draft_label": "Draft content",
     "cms.create.draft_help": "The content of the draft page. This is useful when you want to work on a future version of your page without exposing it.",
@@ -1011,6 +1011,8 @@
     "cms.create.content": "Content",
     "cms.create.draft": "Draft",
     "cms.create.advanced": "Advanced",
+    "cms.content_side.publish_button": "Publish this version",
+    "cms.content_side.publish_label": "Are you sur to publish this version ?",
     "updated password can't be saved": "Updated password can't be saved",
     "incorrect password": "Incorrect password"
 
