--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1013,6 +1013,8 @@
     "cms.create.advanced": "Advanced",
     "cms.content_side.publish_button": "Publish this version",
     "cms.content_side.publish_label": "Are you sur to publish this version ?",
+    "cms.create.last_update": "Last publish date",
+    "cms.create.version_label": "Version",
     "updated password can't be saved": "Updated password can't be saved",
     "incorrect password": "Incorrect password"
 
