--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1016,6 +1016,7 @@
   "cms.content_side.publish_label": "Êtes-vous sûr de vouloir publier cette version ?",
   "cms.create.last_update": "Dernière publication",
   "cms.create.version_label": "Version",
+  "cms.inserted": "The text has been added",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
   "incorrect password": "Mots de passe incorrect"
 }
