rework ui of the cms creation page

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -998,17 +998,14 @@
     "cms.create.path_placeholder": "The path where the page will be displayed",
     "cms.create.path_slash_constraints": "the path must start with a slash",
     "cms.create.path_paths_constraints": "this path is already taken",
-    "cms.create.body_placeholder": "Published content",
     "cms.create.body_help": "The content of the page. It must be of the same type than the content-type",
-    "cms.create.draft_label": "Draft content",
     "cms.create.draft_help": "The content of the draft page. This is useful when you want to work on a future version of your page without exposing it.",
     "cms.create.visible_label": "If not enabled, the page will not exposed'",
     "cms.create.authenticated": "Authenticated",
     "cms.create.authenticated_help": "If enabled, the page will be only visible for authenticated user",
     "cms.create.metadata_help": "Linked metadata",
     "cms.create.tags_help": "Linked tags",
-    "cms.create.information": "Information",
-    "cms.create.content": "Content",
+    "cms.create.content": "Production version",
     "cms.create.draft": "Draft",
     "cms.create.advanced": "Advanced",
     "cms.content_side.publish_button": "Publish this version",
