--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -999,17 +999,14 @@
   "cms.create.path_placeholder": "Le chemin sur lequel la page sera affiché",
   "cms.create.path_slash_constraints": "Le chemin doit commencer par un slash",
   "cms.create.path_paths_constraints": "Ce chemin est déjà pris",
-  "cms.create.body_placeholder": "Page publiée",
   "cms.create.body_help": "Le contenu doit être du même type que celui du Content-Type",
-  "cms.create.draft_label": "Contenu du brouillon",
   "cms.create.draft_help": "Le brouillon est utile lorsqu'on souhaite faire une version en avance de phase, sans pour autant l'exposer",
   "cms.create.visible_label": "Si non activé, la page ne sera pas exposée sur le chemin indiqué",
   "cms.create.authenticated": "Besoind d'être connecté",
   "cms.create.authenticated_help": "Si activé, la page sera seulement visible pour les utilisateurs connectés, les autres seront redirigés vers la page de connexion",
   "cms.create.metadata_help": "Metadata",
   "cms.create.tags_help": "Tags",
-  "cms.create.information": "Informations",
-  "cms.create.content": "Contenu de la page",
+  "cms.create.content": "Version en production",
   "cms.create.draft": "Contenu non publié",
   "cms.create.advanced": "Informations avancées",
   "cms.content_side.publish_button": "Publier cette version",
