--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1010,8 +1010,9 @@
     "cms.create.advanced": "Advanced",
     "cms.content_side.publish_button": "Publish this version",
     "cms.content_side.publish_label": "Are you sur to publish this version ?",
-    "cms.create.last_update": "Last publish date",
+    "cms.create.last_update": "Last update :",
     "cms.create.version_label": "Version",
+    "cms.create.draft_preview": "Visualize draft page",
     "cms.inserted": "Le texte a été ajouté",
     "updated password can't be saved": "Updated password can't be saved",
     "incorrect password": "Incorrect password"
