--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -988,7 +988,7 @@
   "You're not authorized on this api": "Vous n'êtes pas autorisé à accéder à cette API",
   "ask.api.access.info": "Votre demande d'accès à %s à bien été envoyée.",
   "daikokuapp.pages_title": "Edition des pages",
-  "cms.create.back_to_pages": "Retour à la liste",
+  "cms.create.back_to_pages": "Retour",
   "cms.create.new_page": "Nouvelle page",
   "cms.create.save_modifications": "Mettre à jour",
   "cms.create.edited_page": "Edition de la page",
@@ -1002,7 +1002,7 @@
   "cms.create.body_help": "Le contenu doit être du même type que celui du Content-Type",
   "cms.create.draft_help": "Le brouillon est utile lorsqu'on souhaite faire une version en avance de phase, sans pour autant l'exposer",
   "cms.create.visible_label": "Si non activé, la page ne sera pas exposée sur le chemin indiqué",
-  "cms.create.authenticated": "Besoind d'être connecté",
+  "cms.create.authenticated": "Besoin d'être connecté",
   "cms.create.authenticated_help": "Si activé, la page sera seulement visible pour les utilisateurs connectés, les autres seront redirigés vers la page de connexion",
   "cms.create.metadata_help": "Metadata",
   "cms.create.tags_help": "Tags",
