--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -276,6 +276,7 @@
     "tenant_edit.cms_pages": "Personalized home page",
     "tenant_edit.link_to_cmspages": "Edit the pages",
     "tenant_edit.home_page": "Home page",
+    "tenant_edit.404_page": "404 page",
     "tenant_edit.view_home_page": "View home page",
     "Session max. age": "Session max. age",
     "Second": {
