--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -962,6 +962,7 @@
   "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
   "tenant_edit.link_to_cmspages": "Editer les pages",
   "tenant_edit.home_page": "Page d'accueil",
+  "tenant_edit.404_page": "404 page",
   "tenant_edit.view_home_page": "Voir la page d'accueil",
   "Translation mode enabled": "Mode traduction activé",
   "Search translation": "Rechercher une traduction",
