Added exporter of cms

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1017,7 +1017,9 @@
   "cms.create.draft_preview": "Voir la page en cours",
   "cms.pages.remove_confirm": "Êtes-vous sûr de vouloir supprimer cette page ?",
   "cms.create.exact": "Chemin exact",
-  "cms.content_side_view.choose_link": "Choisissez le lien vers le back office à insérer",
+  "cms.content_side_view.choose_link": "Un lien vers une page du back office",
+  "cms.content_side_view.link_to_insert": "Un lien vers l'une de vos autres pages",
+  "cms.content_side_view.block_to_render": "Une page/bloc à rendre dans cette page",
   "cms.content_side_view.notifications": "Notifications",
   "cms.content_side_view.sign_in": "Se connecter",
   "cms.content_side_view.logout": "Déconnexion",
@@ -1025,12 +1027,12 @@
   "cms.content_side_view.back_office": "Back office",
   "cms.content_side_view.sign_up": "S'inscrire",
   "cms.content_side_view.home": "Page d'accueil",
-  "cms.content_side_view.link_to_insert": "Choisissez le lien vers la page à insérer",
-  "cms.content_side_view.block_to_render": "Choisissez le bloc à rendre",
   "cms.index.new_page": "Nouvelle page",
   "cms.pages.publish_date": "Date de publication",
   "cms.pages.name": "Nom",
   "cms.pages.path": "Chemin",
+  "cms.content_side.new_action": "Ajouter un élément",
+  "cms.export_all": "Tout exporter",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
   "incorrect password": "Mots de passe incorrect"
 }
