--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1016,7 +1016,9 @@
     "cms.inserted": "The text has been added",
     "cms.create.exact": "Exact path",
     "cms.pages.remove_confirm": "Are your sure to delete this page?",
-    "cms.content_side_view.choose_link": "Choose the back office link to insert",
+    "cms.content_side_view.choose_link": "A link to a back office page",
+    "cms.content_side_view.link_to_insert": "A link to your own other pages",
+    "cms.content_side_view.block_to_render": "A page or block to display in this page",
     "cms.content_side_view.notifications": "Notifications",
     "cms.content_side_view.sign_in": "Sign in",
     "cms.content_side_view.logout": "Logout",
@@ -1024,13 +1026,12 @@
     "cms.content_side_view.back_office": "Back office",
     "cms.content_side_view.sign_up": "Sign up",
     "cms.content_side_view.home": "Home",
-    "cms.content_side_view.link_to_insert": "Choose the link to the page to insert",
-    "cms.content_side_view.block_to_render": "Choose the block to render",
     "cms.index.new_page": "New page",
     "cms.pages.publish_date": "Publish Date",
     "cms.pages.name": "Name",
     "cms.pages.path": "Path",
+    "cms.content_side.new_action": "Add an element",
+    "cms.export_all": "Export all files",
     "updated password can't be saved": "Updated password can't be saved",
     "incorrect password": "Incorrect password"
-
 }
