--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -435,7 +435,10 @@
     "The trial period": "The trial period",
     "Trial period unit": "Trial period unit",
     "Currency": "Currency",
+    "Cost per hour": "Cost per hour",
+    "Cost per day": "Cost per day",
     "Cost per month": "Cost per month",
+    "Cost per year": "Cost per year",
     "Cost per add. req.": "Cost per add. req.",
     "Cost per additionnal request": "Cost per additionnal request",
     "Cost per req.": "Cost per req.",
@@ -990,5 +993,21 @@
     "incorrect password": "Incorrect password",
     "Standard mode": "Standard mode",
     "Expert mode": "Expert mode",
-    "Subscription.manual.help": "mandatory value due to custom metadata set up"
+    "Subscription.manual.help": "mandatory value due to custom metadata set up",
+    "constraints.required.type": "Type is required",
+    "constraints.oneof.plan.type": "Please select a correct plan type",
+    "constraints.positive": "The value must be positive",
+    "constraints.integer": "The value must be an integer",
+    "constraints.required.billing.period": "The billing period is required",
+    "constraints.oneof.period": "Please, select a correct period unit (Hours, Days, Months or Years)",
+    "constraints.oneof.sub.process": "Please, select a correct subscription process (Automatic or Manual)",
+    "constraints.oneof.integration.process": "Please, select a correct integration process (Automatic or ApiKey)",
+    "constraints.required.period.unit": "The unit of period is required",
+    "Edit plan": "Edit plan",
+    "back.to.team": "Back to %s",
+    "Otoroshi Settings": "Otoroshi Settings",
+    "Otoroshi Customization": "Otoroshi Customization",
+    "Quotas & Billing": "Quotas & Billing",
+    "Skip": "Skip",
+    "Otoroshi target": "Otoroshi target"
 }
