--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -438,7 +438,10 @@
   "The trial period": "La période d'essai",
   "Trial period unit": "Unité de période d'essai",
   "Currency": "Devise",
+  "Cost per hour": "Coût par heure",
+  "Cost per day": "Coût par jour",
   "Cost per month": "Coût par mois",
+  "Cost per year": "Coût par année",
   "Cost per add. req.": "Coût par req. add.",
   "Cost per additionnal request": "Coût par requête additionnelle",
   "Cost per req.": "Coût par req.",
@@ -992,5 +995,22 @@
   "incorrect password": "Mots de passe incorrect",
   "Standard mode": "Mode standard",
   "Expert mode": "Mode expert",
-  "Subscription.manual.help": "valeur obligatoire en raison de la configuration des métadonnées personnalisées"
+  "Subscription.manual.help": "valeur obligatoire en raison de la configuration des métadonnées personnalisées",
+  "constraints.required.type": "Le type est requis",
+  "constraints.oneof.plan.type": "Merci de sélectionner un type de plan correct",
+  "constraints.positive": "La valeur doit être posittive",
+  "constraints.integer": "La valeur doit être un entier",
+  "constraints.required.billing.period": "La periode de facturation est requise",
+  "constraints.oneof.period": "Merci de sélectionner une unité de periode correct (Heures, Jours, Mois ou Années)",
+  "constraints.oneof.sub.process": "Merci de sélectionner une valeur correct pour le processus de souscription (Automatique or Manuel)",
+  "constraints.oneof.integration.process": "Merci de sélectionner une valeur correct pour le processus d'intégration (Automatique or Clef d'API)",
+  "constraints.required.period.unit": "L'unité de periode est requise",
+  "Edit plan": "Modifier le plan",
+  "back.to.team": "Retour à %s",
+  "Otoroshi Settings": "Paramètres Otoroshi",
+  "Otoroshi Customization": "Personnalisation Otoroshi",
+  "Quotas & Billing": "Quotas & Facturation",
+  "Skip": "Passer",
+  "Otoroshi target": "Otoroshi cible"
+  
 }
