added helpers in front

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1028,7 +1028,45 @@
     "cms.content_side_view.sign_up": "Sign up",
     "cms.content_side_view.home": "Home",
     "cms.content_side_view.edit": "Edit",
-    "cms.content_side_view.insert": "Insert",
+    "cms.content_side_view.links": "Choose a link",
+    "cms.content_side_view.pages": "Insert a link",
+    "cms.content_side_view.blocks": "Render a block",
+    "cms.content_side_view.daikoku-user": "Get user information (name, email and picture)",
+    "cms.content_side_view.daikoku-owned-apis": "Get owned apis",
+    "cms.content_side_view.daikoku-owned-api": "Get owned api",
+    "cms.content_side_view.daikoku-json-owned-apis": "Get owned apis as stringified JSON format",
+    "cms.content_side_view.daikoku-json-owned-api": "Get owned api as stringified JSON format",
+    "cms.content_side_view.daikoku-owned-teams": "Get owned teams",
+    "cms.content_side_view.daikoku-owned-team": "Get owned team",
+    "cms.content_side_view.daikoku-json-owned-teams": "Get owned apis as stringified JSON format",
+    "cms.content_side_view.daikoku-json-owned-team": "Get owned team as stringified JSON format",
+    "cms.content_side_view.tenant": "Get informations about the tenant",
+    "cms.content_side_view.is_admin": "Retrieves if the current user is an tenant administrator",
+    "cms.content_side_view.connected": "Retrieves if the current user is connected",
+    "cms.content_side_view.user": "If the user is connected, retrieve his informations",
+    "cms.content_side_view.request": "Get path, method and headers of the request",
+    "cms.content_side_view.daikoku-css": "Get the link to the daikoku stylesheet",
+    "cms.content_side_view.for": "Iterates on an array field",
+    "cms.content_side_view.size": "Get the length of the variable",
+    "cms.content_side_view.ifeq": "Checks if the variable if equals to the value",
+    "cms.content_side_view.ifnoteq": "Checks if the variable if not equals to the value",
+    "cms.content_side_view.getOrElse": "Evaluates the value of the variable and return us the alternative value if the value is empty",
+    "cms.content_side_view.translate": "Translates the variable using daikoku translations",
+    "cms.content_side_view.daikoku-path-param": "Get the nth path params",
+    "cms.content_side_view.daikoku-query-param": "Get the query param of name",
+    "cms.content_side_view.daikoku-template-wrapper": "Display a wrapper block of the passed id",
+    "cms.content_side_view.daikoku-apis": "Get all apis",
+    "cms.content_side_view.daikoku-api": "Get an specific api",
+    "cms.content_side_view.daikoku-json-apis": "Get all apis as stringified JSON format",
+    "cms.content_side_view.daikoku-json-api": "Get a specific api as stringified JSON format",
+    "cms.content_side_view.daikoku-teams": "Get all teams",
+    "cms.content_side_view.daikoku-team": "Get an specific team",
+    "cms.content_side_view.daikoku-json-teams": "Get all teams as stringified JSON format",
+    "cms.content_side_view.daikoku-json-team": "Get a specific team as stringified JSON format",
+    "cms.content_side_view.daikoku-documentations": "Get all documentation pages of an api",
+    "cms.content_side_view.daikoku-documentations-page": "Get a specific page of the documentation of an api",
+    "cms.content_side_view.daikoku-documentations-page-id": "Get a specific page of the documentation of an api by id",
+    "cms.content_side_view.daikoku-plans": "Get the plans of an api",
     "cms.index.new_page": "New page",
     "cms.pages.publish_date": "Publish Date",
     "cms.pages.name": "Name",
