--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1029,7 +1029,45 @@
   "cms.content_side_view.sign_up": "S'inscrire",
   "cms.content_side_view.home": "Page d'accueil",
   "cms.content_side_view.edit": "Editer",
-  "cms.content_side_view.insert": "Insérer",
+  "cms.content_side_view.links": "Insérer un lien vers le back office",
+  "cms.content_side_view.pages": "Insérer un lien vers une page cms",
+  "cms.content_side_view.blocks": "Bloc à rendre",
+  "cms.content_side_view.daikoku-user": "Récupére les informations d'un utilisateur (name, email et picture)",
+  "cms.content_side_view.daikoku-owned-apis": "Récupére les apis de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-owned-api": "Récupére une api de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-json-owned-apis": "Récupére les apis de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.daikoku-json-owned-api": "Récupére une api de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.daikoku-owned-teams": "Récupére les équipes de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-owned-team": "Récupére une équipe de l'utilisateur connecté",
+  "cms.content_side_view.daikoku-json-owned-teams": "Récupére les équipes de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.daikoku-json-owned-team": "Récupére une équipe de l'utilisateur connecté (format JSON)",
+  "cms.content_side_view.tenant": "Récupére les informations du tenant",
+  "cms.content_side_view.is_admin": "Indique si l'utilisateur connecté est un administrateur du tenant ou non",
+  "cms.content_side_view.connected": "Indique si l'utilisateur est connecté",
+  "cms.content_side_view.user": "Récupére, si connecté, les informations de l'utilisateur",
+  "cms.content_side_view.request": "Récupére le chemin, la méthode et les entêtes de la requête",
+  "cms.content_side_view.daikoku-css": "Récupére le lien vers la feuille de style de Daikoku",
+  "cms.content_side_view.for": "Itére sur une variable de type tableau passé en paramètre",
+  "cms.content_side_view.size": "Récupére la longueur de la variable",
+  "cms.content_side_view.ifeq": "S'assure que la variable est égale à la valeur souhaitée",
+  "cms.content_side_view.ifnoteq": "S'assure que la variable n'est pas égale à la valeur souhaitée",
+  "cms.content_side_view.getOrElse": "Evalue la valeur de la variable et retourne l'alternative de la valeur si elle est non définie",
+  "cms.content_side_view.translate": "Traduit une variable en utilisant les traduction de Daikoku",
+  "cms.content_side_view.daikoku-path-param": "Récupére le n-ième path param",
+  "cms.content_side_view.daikoku-query-param": "Récupére le query param avec le nom passé en paramètre",
+  "cms.content_side_view.daikoku-template-wrapper": "Affiche un block englobant un contenu enfant (avec ID)",
+  "cms.content_side_view.daikoku-apis": "Récupére toutes les APIs",
+  "cms.content_side_view.daikoku-api": "Récupére une API spécifique",
+  "cms.content_side_view.daikoku-json-apis": "Récupére toutes les APIs au format JSON",
+  "cms.content_side_view.daikoku-json-api": "Récupére une API au format JSON",
+  "cms.content_side_view.daikoku-teams": "Récupére toutes les APIs",
+  "cms.content_side_view.daikoku-team": "Récupére une team",
+  "cms.content_side_view.daikoku-json-teams": "Récupére toutes les équipes au format JSON",
+  "cms.content_side_view.daikoku-json-team": "Récupére une équipe au format JSON",
+  "cms.content_side_view.daikoku-documentations": "Récupére toutes les pages de documentations d'une API",
+  "cms.content_side_view.daikoku-documentations-page": "Récupére la n-ième page de documentation d'une api souhaitée",
+  "cms.content_side_view.daikoku-documentations-page-id": "Récupére la page de documentation d'une api souhaitée (via Id)",
+  "cms.content_side_view.daikoku-plans": "Récupére les plans d'une API",
   "cms.index.new_page": "Nouvelle page",
   "cms.pages.publish_date": "Date de publication",
   "cms.pages.name": "Nom",
