--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1028,8 +1028,8 @@
     "cms.content_side_view.sign_up": "Sign up",
     "cms.content_side_view.home": "Home",
     "cms.content_side_view.edit": "Edit",
-    "cms.content_side_view.links": "Choose a link",
-    "cms.content_side_view.pages": "Insert a link",
+    "cms.content_side_view.links": "Choose a link to the back office",
+    "cms.content_side_view.pages": "Insert a link to a cms page",
     "cms.content_side_view.blocks": "Render a block",
     "cms.content_side_view.daikoku-user": "Get user information (name, email and picture)",
     "cms.content_side_view.daikoku-owned-apis": "Get owned apis",
