added import function

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1074,6 +1074,7 @@
   "cms.pages.path": "Chemin",
   "cms.content_side.new_action": "Ajouter un élément",
   "cms.export_all": "Tout exporter",
+  "cms.import_all": "Importer",
   "updated password can't be saved": "Le mots de passe n'a pu être mis à jour.",
   "incorrect password": "Mots de passe incorrect"
 }
