added cms tests

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1077,6 +1077,9 @@
     "cms.pages.path": "Path",
     "cms.content_side.new_action": "Add an element",
     "cms.export_all": "Export all files",
+    "cms.revisions.restore": "Restore this version",
+    "cms.revisions.delete_sentence": "Are you sure to restore this version ?",
+    "cms.revisions.version_history": "Version history",
     "updated password can't be saved": "Updated password can't be saved",
     "incorrect password": "Incorrect password"
 }
