--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -801,8 +801,8 @@
   "team_api_post.title": "Titre de la publication",
   "team_api_post.content": "Contenu",
   "New Published Post": "Une nouvelle publication a été publiée",
-  "News": "Informations",
-  "deleted": "dupprimé",
+  "News": "Actualités",
+  "deleted": "supprimé",
   "Deleted API": "API supprimée",
   "Personal": "Personel",
   "team.invitation": "%s, administrateur de %s, vous a invité a rejoindre son équipe.",
