--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -961,7 +961,6 @@
   "mailing_internalization.go_to_edit_template": "Editer le modèle de mails",
   "tenant_edit.translation_mode_message": "Vous pouvez à présent naviguer sur les pages et survoler chaque élement pour modifier leur texte",
   "tenant_edit.link_to_cmspages": "Editer les pages",
-  "tenant_edit.cms_warning": "Passer la sécurité du tenant en public pour commencer à utiliser le système de gestionnaire de contenu",
   "tenant_edit.home_page": "Page d'accueil",
   "tenant_edit.404_page": "404 page",
   "tenant_edit.authenticated_cmspage": "Page authentifié",
@@ -1065,17 +1064,21 @@
   "cms.content_side_view.daikoku-json-apis": "Récupére toutes les APIs au format JSON",
   "cms.content_side_view.daikoku-json-api": "Récupére une API au format JSON",
   "cms.content_side_view.daikoku-teams": "Récupére toutes les APIs",
-  "cms.content_side_view.daikoku-team": "Récupére une team",
+  "cms.content_side_view.daikoku-team": "Récupére une équipe",
   "cms.content_side_view.daikoku-json-teams": "Récupére toutes les équipes au format JSON",
   "cms.content_side_view.daikoku-json-team": "Récupére une équipe au format JSON",
   "cms.content_side_view.daikoku-documentations": "Récupére toutes les pages de documentations d'une API",
   "cms.content_side_view.daikoku-documentations-page": "Récupére la n-ième page de documentation d'une api souhaitée",
   "cms.content_side_view.daikoku-documentations-page-id": "Récupére la page de documentation d'une api souhaitée (via Id)",
   "cms.content_side_view.daikoku-plans": "Récupére les plans d'une API",
+  "cms.body.drag_and_drop_advice": "Dépose un fichier dans l'éditeur pour importer le contenu directement",
   "cms.index.new_page": "Nouvelle page",
   "cms.pages.publish_date": "Date de publication",
   "cms.pages.name": "Nom",
+  "cms.pages.block": "BLOC",
+  "cms.sidebar.is_block_page": "Est-ce un bloc ?",
   "cms.pages.path": "Chemin",
+  "cms.create.path": "Chemin d'exposition",
   "cms.content_side.new_action": "Ajouter un élément",
   "cms.export_all": "Exporter",
   "cms.import_all": "Importer",
