--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -273,8 +273,7 @@
     "Audit trail (Kafka)": "Audit trail (Kafka)",
     "Alerting": "Alerting",
     "Bucket": "Bucket",
-    "tenant_edit.cms_pages": "Custom home page",
-    "tenant_edit.cms_warning": "Switch your visibility tenant to public to get started with the CMS",
+    "tenant_edit.cms_pages": "Personalized homepage",
     "tenant_edit.link_to_cmspages": "Edit the pages",
     "tenant_edit.home_page": "Home page",
     "tenant_edit.404_page": "404 page",
@@ -1072,9 +1071,13 @@
     "cms.content_side_view.daikoku-documentations-page-id": "Get a specific page of the documentation of an api by id",
     "cms.content_side_view.daikoku-plans": "Get the plans of an api",
     "cms.index.new_page": "New page",
+    "cms.pages.block": "BLOCK",
+    "cms.sidebar.is_block_page": "Is a block ?",
     "cms.pages.publish_date": "Publish Date",
     "cms.pages.name": "Name",
     "cms.pages.path": "Path",
+    "cms.create.path": "Path",
+    "cms.body.drag_and_drop_advice": "Drop a file in the editor to easily import its content",
     "cms.content_side.new_action": "Add an element",
     "cms.export_all": "Export all files",
     "cms.revisions.restore": "Restore this version",
